  * Move slice membership table above AM list (#819)
  * Fix redirect to KM if portal is not authorized (#940)
  * Set bulk headers in automated emails (#871)
  * Avoid looking up null member IDs and do not redirect on error
    looking up member names. (#935)
  * Organize slices by whether I'm lead (#710)
  * Don't impersonate user email (#879)

== 2.6.1 ==
  * Fix displaying email address in handle project request (#915)
  * Ensure scripts validate inputs, print something on success (#914)
  * Fix OpenID server (#917)
  * Clean up options in geni-enable-user and geni-disable-user (#918)
  * Clean usage in scripts (#919)
  * Add a missing copyright (#920)
  * Add ION aggregate (#922)
  * geni-foo-member-attribute scripts should use the MA API (#923)
  * Ensure geni-* scripts are installed (#924)
  * Add GPO lab dev server CA cert (#925)
  * Handle error returns in geni-enable-user and disable-user (#927)
  * Check if join project request is still pending before processing (#936)

== 2.6 ==
  * Split out the clearinghouse implementation into the new `chapi`
  repository. That new clearinghouse implements the
  [http://groups.geni.net/geni/wiki/UniformClearinghouseAPI Uniform
  Federation APIs] and uses XML-RPC over SSL instead of S/MIME, but
  otherwise retains the funtionality of the previous clearinghouse
  server. To support this change, the `*_client` library functions have
  been re-written, but the portal UI pages remain largely
  unchanged. From here on, this repository and release notes cover
  only the portal client.
  * Ensure WiMAX givenname is non empty (#885)
  * Clean up the email on handling a project join request (#881)
  * Check for valid project_id in do-handle-project-join-request (#886)
  * Use convert_boolean when checking a boolean DB value (#888)
  * Remove cruft line from kettering-ig-of cert (#890)

= GENI Portal and Clearinghouse Release Notes =

== 2.5.1 ==
  * Send only current projects, not expired, to GEMINI (#887)

== 2.5 ==