@@ -52,6 +52,9 @@ $portal_max_slice_renewal_days = 185;
 // Portal version
 $portal_version = "2.6.2";
 
+// URL to the Flack SWF. Used in flack.php
+$flack_url = "https://www.emulab.net/protogeni/flack3/flack.swf";
+
 //----------------------------------------------------------------------
 // Set error level to include user errors (generated by the portal).
 //----------------------------------------------------------------------
