@@ -20,6 +20,7 @@
     looking up member names. (#935)
   * Organize slices by whether I'm lead (#710)
   * Don't impersonate user email (#879)
+  * Parametrize Flack URL (#941)
 
 == 2.6.1 ==
   * Fix displaying email address in handle project request (#915)
